# ChangeLog for sys-fs/xfsprogs
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-fs/cvs-repo/gentoo-x86/sys-fs/xfsprogs/ChangeLog,v 1.132 2011/03/30 16:11:22 jer Exp $

  30 Mar 2011; Jeroen Roovers <jer@gentoo.org> xfsprogs-3.1.4.ebuild:
  Stable for HPPA (bug #358499).

  20 Mar 2011; Raúl Porcel <armin76@gentoo.org> xfsprogs-3.1.4.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #358499

  13 Mar 2011; Markos Chandras <hwoarang@gentoo.org> xfsprogs-3.1.4.ebuild:
  Stable on amd64 wrt bug #358499

  13 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> xfsprogs-3.1.4.ebuild:
  ppc/ppc64 stable wrt #358499

  13 Mar 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  xfsprogs-3.1.4.ebuild:
  x86 stable wrt bug #358499

*xfsprogs-3.1.4 (13 Dec 2010)

  13 Dec 2010; Mike Frysinger <vapier@gentoo.org> +xfsprogs-3.1.4.ebuild:
  Version bump #348147 by Francisco Javier.

  18 Aug 2010; Mike Frysinger <vapier@gentoo.org> xfsprogs-3.1.2.ebuild,
  +files/xfsprogs-3.1.2-depend.patch:
  Clean up dependency generation to avoid parallel build issues #333155 by
  Samuli Suominen.

  17 Aug 2010; Mike Frysinger <vapier@gentoo.org>
  files/xfsprogs-3.1.1-sharedlibs.patch, xfsprogs-3.1.2.ebuild:
  Clean up library install and prefer readline over editline like upstream
  #311109.

*xfsprogs-3.1.2 (03 Jun 2010)

  03 Jun 2010; Tiziano Müller <dev-zero@gentoo.org>
  +files/xfsprogs-3.1.1-sharedlibs.patch, +xfsprogs-3.1.2.ebuild:
  Version bump (bug #311109), added deps for readline/libedit, added
  static-libs use flag, changed dependency from e2fsprogs to util-linux,
  thanks to Hendrik Leppkes for the updated patch.

  11 May 2010; Joseph Jezak <josejx@gentoo.org> xfsprogs-3.0.3.ebuild:
  Marked ppc/ppc64 stable for bug #311381.

  06 May 2010; Jeroen Roovers <jer@gentoo.org> xfsprogs-3.0.3.ebuild:
  Stable for HPPA (bug #311381).

  25 Apr 2010; Raúl Porcel <armin76@gentoo.org> xfsprogs-3.0.3.ebuild: