@@ -3,13 +3,15 @@ Hash: SHA256
 
 AUX xfsprogs-3.1.1-sharedlibs.patch 3155 RMD160 50be1dfe1ce5bfca949cb9ca350398a9a9140c44 SHA1 731bd98af57ca163dba9c55e0cdfd36ed8dfeb96 SHA256 4faf261ea393421297a15745fcda184aa088ec5b1456f0fdf92c2053070ebf00
 DIST xfsprogs-3.1.4.tar.gz 1377412 RMD160 8085c82cfaa8f2efa1496fa851d22c53866cb59d SHA1 54472812ecf2f0e5e3addcdef639895dd80081f8 SHA256 1cdceb890622dbe7b9d42b9b81f37bb9f7d380b44606db138cf7c4676ad0a1a6
+DIST xfsprogs-3.1.5.tar.gz 1403198 RMD160 c1886836aa4fe09e0883d586ede232e1e404575c SHA1 2d25b54bed63e46330aeae72f3272a667ec8946e SHA256 13347de43203c4575bca7a72efb344c7caf8a86fa216bbd69bf1980f2fb2f37f
 EBUILD xfsprogs-3.1.4.ebuild 2745 RMD160 ae8061f23e58c3d5dad6781ae757183d3b7beb91 SHA1 770d6145e38642c2a4a927797d939d911d686ecf SHA256 19799432858cce4b66e13d259b6a5f9e8c76d8dc70ad2be2ae544ac3878598fc
-MISC ChangeLog 20965 RMD160 5ae0957ae184576d7b6f65ffdcf7a1c9881b5a7d SHA1 f2128234f14af038ff440a04d312a8980e4d5976 SHA256 f91a8b5d6a9daba7a9782fba6a2387aefb7e8e3b6a09dd6a695b410c30f582bb
+EBUILD xfsprogs-3.1.5.ebuild 2758 RMD160 f36582108312bd4533357aeb8f0643ac5ad440cb SHA1 bf79dc33ac2af54e99a4f20c3f853e5ae1e3975a SHA256 6dea1e610221a7c1c328a90ed054ee254ff2d4b383988e581ac30c35e2a5fc6e
+MISC ChangeLog 21114 RMD160 f9022ee286ac02a34825fc557d52844727a6fa9b SHA1 e019fc1894833c4ae93982d9b0710e2b40e111aa SHA256 d3bf36fb76a44566dfae1becadd81b2102ec7d17c42e80c0734bd0c79c77b0d5
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk2TYmYACgkQXkR9YqOcLPGHEgD/RDy0AKVUN88nTVPP1ZD60/YD
-ebNsQIGiuouW2j2AOMwBAKmncDN/Poc57/6kS6U4lkxv0dh5BQh5WBPq8GBwAFwW
-=Hfhi
+iF4EAREIAAYFAk2kiwYACgkQaC/OocHi7JagOgD+NK9vZErI60Su8nEN8VqHvMDq
+8Z/9zjHONp62WKT9jSEBAJxV27ZSB5IB8SvPakdNvyYqCCvF6hF6PQjR20vMjt+i
+=nPIe
 -----END PGP SIGNATURE-----
